Fix texts and it's aligns

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,8 @@ div.textArea-concept, div.textArea-program, div.textArea-information, div.textAr
 {
 	position: fixed;
 	margin-top:10%;
-	width:60%; 
+	margin-left:15%;
+	width:70%; 
 	height:500px;
 	opacity:0;
 	filter: alpha(opacity=0);
@@ -39,7 +40,8 @@ div.textArea-concept, div.textArea-program, div.textArea-information, div.textAr
 div.titleDiv
 {
 	position: fixed;
-	width: 100%;
+	width: 70%;
+	margin-left:15%;
 	height: 5%;
 	top: 13%;
 	text-align: center;
